--- a/assetsNeztWorkNew/css/app.css
+++ b/assetsNeztWorkNew/css/app.css
@@ -4832,6 +4832,166 @@ option {
     border-radius : 50%;
 }
 /* // */
+.nz_ai_page_banner {
+    margin-top : 109px;
+}
+.nz_ai_page_banner--img {
+    width : 100%;
+    height : 100%;
+    border-radius: 2rem;
+}
+.nz_ai_page_banner--image {
+   position: relative;
+
+}
+.nz_ai_page_banner_content {
+    position : absolute;
+    top : 0;
+    left : 0;
+    padding : 4rem;
+}
+.nz_ai_page_banner_content--title {
+    font-size: 4rem;
+    color: #FF6635;  
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif; 
+}
+.nz_ai_page_banner_content--text {
+    font-size: 1.8rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+    margin-top : 1rem; 
+}
+.nz_ai_blog {
+    margin-top : 8rem;
+}
+.nz_ai_blog--title {
+    font-size: 3rem;
+    color: #7C4D42;  
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif; 
+    text-align: center;
+}
+.nz_ai_blog_list_item--title {
+    font-size: 2.4rem;
+    color: #45403F;  
+    font-weight: 600;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_blog_list_item--text {
+    font-size: 1.8rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_blog_list_item--img {
+    width : 100%;
+    height : 100%;
+    border-radius : 1rem;
+}
+.nz_ai_blog_list {
+    margin-top : 4rem;
+}
+.nz_ai_question {
+    margin-top : 8rem;
+}
+.nz_ai_blog_list_item--header {
+    font-size: 2rem;
+    color: #45403F;  
+    font-weight: 500;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_blog_list_item--content {
+  font-size: 1.8rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_slogan {
+    margin-top : 8rem;
+    background-color : #eee;
+    padding : 2rem;
+}
+.nz_ai_slogan_item--text {
+    font-size: 1.8rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_review {
+    margin-top : 8rem;
+}
+.nz_ai_review_list_item--desc {
+    font-size: 1.8rem;
+    color: #45403F;  
+    font-weight: 500;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_review_list_item--name {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+}
+.nz_ai_review_list_item--img {
+    witdh : 100%;
+    height  :100%;
+}
+.nz_ai_review_list .slick-initialized .slick-slide {
+    margin: 0 10px;
+  }
+ .nz_ai_review_list .slick-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 1;
+    z-index: 5;
+    transition: all 0.2s linear;
+  }
+  .nz_ai_review_list .slick-arrow:hover {
+    background-color: #2cccff;
+    color: white;
+  }
+  .nz_ai_review_list .slick-prev {
+    left: 0;
+  }
+  .nz_ai_review_list .slick-next {
+    right: 0;
+  }
+  .nz_ai_review_list .slick-dots {
+    position: absolute;
+    bottom: -30px;
+    left: 49%;
+    transform: translate(-50%, 0);
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    gap: 0 20px;
+    padding : 0px;
+    font-size: 0px !important;
+  }
+  .nz_ai_review_list .slick-dots button {
+    font-size: 0px !important;
+    width: 15px;
+    height: 15px;
+    border-radius: 100rem;
+    background-color: #eee;
+    border: none;
+    outline: none;
+    transition: all 0.2s linear;
+  }
+  .nz_ai_review_list .slick-dots .slick-active button {
+    background-color: var(--main-color);
+  }
+/* // */
   @media screen and (max-width: 1600px) { 
     .event_wrapper {
         margin-left : 15rem;
@@ -5214,7 +5374,12 @@ option {
 .social_impact_join_list_bg {
     display: none;
 }
-
+.nz_ai_page_banner_content {
+    position: unset;
+}
+.nz_ai_review_list  {
+    padding : 0rem 30rem;
+}
 }
 @media screen and (max-width: 768px) { 
  
@@ -5436,7 +5601,27 @@ option {
     .csbm_page_content_item--image {
         width : 180px;
     }
-   
+    .nz_ai_page_banner_content--title {
+        font-size : 3rem;
+    }
+    .nz_ai_blog {
+        margin-top : 5rem;
+    }
+    .nz_ai_page_banner_content {
+        padding : 1rem;
+    }
+    .nz_ai_blog--title {
+        font-size : 2.8rem;
+    }
+    .nz_ai_question {
+        margin-top : 5rem;
+    }
+    .nz_ai_slogan  {
+        margin-top : 5rem;
+    }
+    .nz_ai_review {
+        margin-top : 5rem;
+    }
 }
 @keyframes slideLeft {
     to {
@@ -5833,5 +6018,8 @@ option {
 }
 .about_page_banner_item_content--mobile--image {
     display : block;
+}
+.nz_ai_review_list {
+    padding : 0rem 45rem;
 }
   }
