--- a/assetsNeztWorkNew/css/app.css
+++ b/assetsNeztWorkNew/css/app.css
@@ -4991,6 +4991,229 @@ option {
   .nz_ai_review_list .slick-dots .slick-active button {
     background-color: var(--main-color);
   }
+  .nz_team_page_banner_item_image--img {
+    width : 100%;
+    height : 100%;
+    border-radius: 2rem;
+  }
+  .nz_team_page_banner--title {
+    font-size: 5rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif;
+    background: linear-gradient(90deg, #FFBEA9 0%, #FF6635 10%, #FF0E73 99%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
+  .nz_team_page_banner--text {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;
+  }
+  .nz_team_page_banner {
+    margin-top : 109px;
+    padding : 3rem;
+    background-color: #fff3e9;
+    border-radius: 1rem;
+  }
+  .nz_team_page_experience {
+    margin-top : 8rem;
+  }
+  .nz_team_page_experience--title {
+    font-size: 3rem;
+    color: #7C4D42;  
+    font-weight: 400;  
+    font-family: "VNM Sans Std", sans-serif;  
+    text-align: center;
+  }
+  .nz_team_page_experience_header {
+    font-size: 1.5rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+    text-align: center;
+  }
+  .nz_team_page_experience_header .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #7C4D42 !important;  
+    font-weight : bold;
+  }
+  .nz_team_page_experience_content--img {
+    width : 100%;
+    height : 100%;
+    border-radius: 2rem;
+  }
+  .nz_team_page_experience_content_list--title {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+  }
+  .nz_team_page_feature {
+    margin-top : 8rem;
+  }
+  .nz_team_page_experience--text {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+    text-align : center;
+  }
+  .nz_team_page_feature_list_item--img {
+    width : 100%;
+
+    object-fit : cover;
+    border-radius: 1rem 1rem 0rem 0rem;
+  }
+  .nz_team_page_feature_list_item_content--title {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 600;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+  }
+  .nz_team_page_feature_list_item_content--text {
+    font-size: 1.5rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif;  
+  }
+  .nz_team_page_feature_list_item--image {
+    width : 100%;
+
+  }
+
+  .nz_team_page_feature_list_item_content {
+    bordre-radius: 3rem;
+    background-color : #fff3e9;
+    padding : 2rem;
+    border-radius: 0rem 0rem 1rem 1rem;
+  }
+  .nz_team_page_service {
+    margin-top : 8rem;
+    background-color: #fff3e9;
+    padding : 3rem;
+  }
+  .nz_team_page_service_list_item--img {
+    width: 100%;
+    border-radius: 2rem;
+  }
+  .nz_team_page_service_list_item--image {
+    width: 100%;
+  
+  }
+  .nz_team_page_interest {
+    margin-top : 8rem;
+  }
+  .nz_team_page_review {
+    margin-top : 8rem;
+  }
+  .nz_team_page_review_item--img {
+    width: 100%;
+    object-fit : cover;
+    border-radius: 2rem;
+  }
+
+
+.nz_team_page_review_list .slick-initialized .slick-slide {
+    margin: 0 10px;
+  }
+ .nz_team_page_review_list .slick-arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    line-height: 1;
+    z-index: 5;
+    transition: all 0.2s linear;
+  }
+  .nz_team_page_review_list .slick-arrow:hover {
+    background-color: #2cccff;
+    color: white;
+  }
+  .nz_team_page_review_list .slick-prev {
+    left: 0;
+  }
+  .nz_team_page_review_list .slick-next {
+    right: 0;
+  }
+  .nz_team_page_review_list .slick-dots {
+    position: absolute;
+    bottom: -50px;
+    left: 49%;
+    transform: translate(-50%, 0);
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    gap: 0 20px;
+    padding : 0px;
+    font-size: 0px !important;
+  }
+  .nz_team_page_review_list .slick-dots button {
+    font-size: 0px !important;
+    width: 15px;
+    height: 15px;
+    border-radius: 100rem;
+    background-color: #eee;
+    border: none;
+    outline: none;
+    transition: all 0.2s linear;
+  }
+  .nz_team_page_review_list .slick-dots .slick-active button {
+    background-color: var(--main-color);
+  }
+  .nz_team_page_price {
+    margin-top : 10rem;
+    background-color: #fff3e9;
+    padding:  3rem;
+  }
+
+  .nz_team_page_scale {
+    margin-top : 8rem;
+  }
+  .nz_team_page_feature_list_item_content--btn {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 500;  
+    font-family: "Be Vietnam Pro 2022", sans-serif; 
+    padding : 1rem;
+    background-color: var(--main-color);
+    border-radius: 1rem;
+    color: #fff;
+    display: inline-block;
+    text-decoration: none;
+    transition : all 0.2s linear;
+    border: 1px solid transparent;
+  }
+  .nz_team_page_feature_list_item_content--btn:hover {
+    background-color: #fff;
+    color: var(--main-color);
+    border: 1px solid var(--main-color);
+  }
+  .nz_team_page_question {
+    margin-top : 8rem;
+  }
+  .nz_team_page_question_header {
+    font-size: 1.6rem;
+    color: #45403F;  
+    font-weight: 600;  
+    font-family: "Be Vietnam Pro 2022", sans-serif; 
+  }
+  .nz_team_page_question_content {
+    font-size: 1.5rem;
+    color: #45403F;  
+    font-weight: 400;  
+    font-family: "Be Vietnam Pro 2022", sans-serif; 
+  }
+  .accordion-button:not(.collapsed) {
+        background-color: #fff3e9 !important;
+  }
 /* // */
   @media screen and (max-width: 1600px) { 
     .event_wrapper {
@@ -5379,6 +5602,34 @@ option {
 }
 .nz_ai_review_list  {
     padding : 0rem 30rem;
+}
+.nz_team_page_banner--title {
+    font-size: 4rem;
+}
+.nz_team_page_experience {
+    margin-top: 5rem;
+}
+.nz_team_page_experience_tab {
+    justify-content : center !important;
+}
+.nz_team_page_feature {
+    margin-top : 5rem;
+}
+.nz_team_page_service {
+    margin-top : 5rem;
+}
+.nz_team_page_interest {
+    margin-top : 5rem;
+}
+.nz_team_page_review {
+    padding : 0rem 10rem;
+    margin-top : 5rem;
+}
+.nz_team_page_scale {
+    margin-top : 5rem;
+}
+.nz_team_page_question {
+    margin-top : 5rem;
 }
 }
 @media screen and (max-width: 768px) { 
@@ -6021,5 +6272,31 @@ option {
 }
 .nz_ai_review_list {
     padding : 0rem 45rem;
+}
+
+.nz_team_page_banner--title  {
+    font-size: 3rem;
+}
+.nz_team_page_banner  {
+    padding : 1rem;
+}
+.nz_team_page_experience--title {
+    font-size: 2rem;
+}
+.nz_team_page_experience_tab  {
+    justify-content : none !important;
+}
+.nz_team_page_price {
+    padding : 1rem;
+}
+.nz_team_page_service {
+    padding : 1rem;
+}
+.nz_team_page_review {
+    padding : 0rem 45rem;
+  
+}
+.nz_team_page_review_item  {
+    margin-right : 0rem;
 }
   }
