--- a/assetsNeztWorkNew/css/app.css
+++ b/assetsNeztWorkNew/css/app.css
@@ -4002,7 +4002,7 @@ option {
 /* // */
 /* // CSBM */
 .csbm_page_wrapper {
-    margin-top : 14.8rem;  
+    margin-top : 10.9rem;  
     padding : 0rem 2rem;
 }
 .csbm_page_content_item_grid {
@@ -4012,7 +4012,7 @@ option {
     gap: 3rem 2rem; /* Khoảng cách giữa các ô */   
 }
 .csbm_page_content_item {
-    background-color: #eef0f2;
+    background-color: #fff3e9;
 
     padding : 2rem;
     border-radius: 2rem;
@@ -4022,14 +4022,14 @@ option {
 
 }
 .csbm_page--title {
-    font-size : 7rem;
+    font-size : 5rem;
     font-weight : 400;
     font-family: "VNM Sans Std", sans-serif;
     text-align : center;
     padding : 0rem 2rem;
 }
 .csbm_page--text {
-    font-size : 2.4rem;
+    font-size : 1.6rem;
     font-weight : 400;
     font-family: "Be Vietnam Pro 2022", sans-serif;
     color: #45403F;
@@ -4042,34 +4042,28 @@ option {
     color: transparent; 
 }
 .csbm_page_content_list {
-    margin-top : 13.8rem;
+    margin-top :  8rem;
 }
 .csbm_page_content_list--title {
-    font-size : 5rem;    
-    font-weight : 400;  
-    font-family: "VNM Sans Std", sans-serif;  
-    color: #7C4D42;  
-    margin-bottom: 4rem;
+    font-size: 3rem;
+    color: #7C4D42;
+    font-weight: 400;
+    font-family: "VNM Sans Std", sans-serif;
+    text-align: center;
+    margin-bottom: 2rem;
 
 }
-.csbm_page_content_item--image {
-    width: 218px;
-    height: auto;    
-}
 
-.csbm_page_content_item--img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+
+
 
 
 
 .csbm_page_content_item--text {
-    font-size : 2.4rem;    
-    font-weight : 600;  
-    font-family: "Be Vietnam Pro 2022", sans-serif;  
-    color: #45403F;   
+    font-size: 1.7rem;
+    color: #45403F;
+    font-weight: 500;
+    font-family: "Be Vietnam Pro 2022", sans-serif; 
     margin-top : 3.5rem;
     transition: all 0.2s linear;
 }
@@ -4465,16 +4459,16 @@ option {
 
  /* // about page  */
  .about_page_wrapper {
-        background-color : #f7f7f7;
+        /* background-color : #f7f7f7; */
         position: relative;
-     
+        linear-gradient(to bottom, rgb(245 241 239), #ffffff) !important
         /* padding : 0rem 2rem; */
  }
  .about_page_banner_bg {
     position: absolute;
     top : 3%;
      right : 0;
-     max-width : 500px;
+     max-width : 400px;
  }
  .about_page_banner_bg--img {
     width : 100%;
@@ -4491,7 +4485,7 @@ option {
  }
 
 .about_page_banner_item_content--title {
-    font-size: 7rem; 
+    font-size: 5rem; 
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif;  
 
@@ -4502,19 +4496,19 @@ option {
 }
 .about_page_banner_item_content--text {
 
-    font-size: 2.4rem;
+    font-size: 1.6rem;
     color: #45403F;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
 }
 .about_page_banner_item_content--text_rgba {
-    font-size: 2.4rem;
+    font-size: 1.6rem;
     color: #FF6635;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
 }
 .about_page_banner_item_content_item {
-    margin-top : 5.7rem;
+    margin-top : 2rem;
 }
 .about_page_we_list_item {
     padding: 2rem;
@@ -4525,12 +4519,12 @@ option {
     height: 100%;
 }
 .about_page_we {
-        margin-top : 138px;
+        margin-top : 8rem;
         padding : 0rem 2rem;
 
 }
 .about_page_we--title {
-    font-size: 5rem;
+    font-size: 3rem;
     color: #7C4D42;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif;  
@@ -4554,7 +4548,7 @@ option {
     object-fit : cover;
 }
 .about_page_we_list_item--title {
-    font-size: 2.4rem;
+    font-size: 1.7rem;
     color: #45403F;  
     font-weight: 600;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
@@ -4565,15 +4559,15 @@ option {
 
 }
 .about_page_we_list_item--text {
-    font-size: 2rem;
+    font-size: 1.6rem;
     color: #45403F;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
-    margin-top : 3.5rem;
+    margin-top : 2rem;
     flex-grow: 1;
 }
 .about_page_commit {
-    margin-top : 100px;
+    margin-top : 8rem;
     padding : 0rem 2rem;
 }
 .about_page_commit_one--img {
@@ -4581,13 +4575,13 @@ option {
     height : bold;      
 }
 .about_page_commit_one_content--title {
-    font-size: 5rem;
+    font-size: 2.5rem;
     color: #ffffff;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif;  
 }
 .about_page_commit_one_content--text {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     color: #ffffff;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif;  
@@ -4602,7 +4596,7 @@ option {
     padding : 4rem;
 }
 .about_page_commit_warpper {
-    margin-top : 5.1rem;
+    margin-top : 3.5rem;
 }
 .about_page_commit_warpper_list {
     margin-top : 2.4rem;
@@ -4626,7 +4620,7 @@ option {
     padding : 4rem;
 }
 .about_page_review {
-    margin-top : 10rem;
+    margin-top : 8rem;
     padding : 0rem 2rem;
 }
 
@@ -4660,7 +4654,7 @@ option {
     margin-top : 2rem;
 }
 .about_page_review_list--desc {
-    font-size: 3rem;
+    font-size: 1.8rem;
     color: #45403F;  
     font-weight: 500;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
@@ -4673,20 +4667,20 @@ option {
     width : 5rem;
     height : 2px;
     background-color : #B0ABA9;
-    margin : 4rem 0rem;
+    margin : 2rem 0rem;
  }
 
 
  .about_page_job {
-    margin-top : 14.7rem;
-    background-color : #fae1ec;
+    margin-top : 8rem;
+    background-color : #fff3e9;
 
-    border-radius : 4rem;
+    border-radius : 1rem;
 
  }
  .about_page_job_list {
     position: relative;
-    padding : 4rem;
+    padding : 3rem;
  }
  .about_page_job_list_bg {
     position: absolute;
@@ -4694,26 +4688,26 @@ option {
     left: -40px;
  }
  .about_page_job_list--title {
-    font-size: 4.8rem;
+    font-size: 3rem;
     color: #45403F;   
     font-weight: 400;   
     font-family: "VNM Sans Std", sans-serif;  
  }
  .about_page_job_list--text {
-    font-size: 3rem;
+    font-size: 1.7rem;
     color: #45403F;  
     font-weight: 500;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
  }
  .about_page_job_list--link {
-    font-size: 3rem;
+    font-size: 1.7rem;
     color: #45403F;  
     font-weight: 500;  
     font-family: "Be Vietnam Pro 2022", sans-serif;  
     
  }
  .about_page_slogan {
-    margin-top : 141px;
+    margin-top : 8rem;
 
  
  }
@@ -4726,13 +4720,13 @@ option {
     height : :100%;
  }
  .about_page_slogan_content--title {
-    font-size: 4.8rem;
+    font-size: 3rem;
     color: #ffffff;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif;  
  }
  .about_page_slogan_content--text {
-    font-size: 2.4rem;
+    font-size: 1.8rem;
     color: #ffffff;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif; 
@@ -4757,15 +4751,19 @@ option {
     display: none;
 }
 .about_page_banner_item_content--mobile--img {
-    width : 100%;
-    height : 100%;
+    /* width : 100%; */
+    /* height : 100%; */
+    display: flex;
+    justify-content : center;
+    align-items: center;
+    margin: 0 auto;
 }
 /* // social impact */
 .social_impact_banner {
     margin-top : 8rem;
 }   
 .social_impact_banner_list_item--title {
-    font-size: 7rem;
+    font-size: 5rem;
     color: #FF6635;  
     font-weight: 400;  
     font-family: "VNM Sans Std", sans-serif; 
@@ -4778,16 +4776,19 @@ option {
     font-family: "VNM Sans Std", sans-serif;   
 }
 .social_impact_trust {
-    margin-top : 10.5rem;
+    margin-top : 8rem;
 }
 .social_impact--text  {
     font-size : 1.6rem;
 }
 .social_impact--desc {
-    font-size : 2rem;
+    font-size : 1.6rem;
+    color: #45403F;
+    font-weight: 400;
+    font-family: "Be Vietnam Pro 2022", sans-serif;
 }
 .social_impact_blog {
-    margin-top : 13rem;
+    margin-top : 8rem;
 }
 .social_impact_blog_item_two {
     margin-top : 5rem;
@@ -4802,12 +4803,12 @@ option {
     border-radius : 2rem;
 }
 .about_page_we--text {
-    font-size: 4rem;
+    font-size: 2rem;
 }
 .social_impact_join_list__new {
     position: relative;
     padding: 4rem;
-    margin-bottom: 15rem;
+    margin-bottom: 10rem;
 }
 .social_impact_join_list_bg {
     position: absolute;
@@ -4834,30 +4835,29 @@ option {
 /* // */
 .nz_ai_page_banner {
     margin-top : 109px;
+    background-color : #fff3e9;
+    padding : 3rem;
+    border-radius: 1rem;
 }
 .nz_ai_page_banner--img {
     width : 100%;
     height : 100%;
     border-radius: 2rem;
 }
-.nz_ai_page_banner--image {
-   position: relative;
 
-}
-.nz_ai_page_banner_content {
-    position : absolute;
-    top : 0;
-    left : 0;
-    padding : 4rem;
-}
+
 .nz_ai_page_banner_content--title {
-    font-size: 4rem;
-    color: #FF6635;  
-    font-weight: 400;  
-    font-family: "VNM Sans Std", sans-serif; 
+    font-size: 5rem;
+    color: #45403F;
+    font-weight: 400;
+    font-family: "VNM Sans Std", sans-serif;
+    background: linear-gradient(90deg, #FFBEA9 0%, #FF6635 10%, #FF0E73 99%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
 }
 .nz_ai_page_banner_content--text {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     color: #45403F;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;
@@ -4868,21 +4868,21 @@ option {
 }
 .nz_ai_blog--title {
     font-size: 3rem;
-    color: #7C4D42;  
-    font-weight: 400;  
-    font-family: "VNM Sans Std", sans-serif; 
+    color: #7C4D42;
+    font-weight: 400;
+    font-family: "VNM Sans Std", sans-serif;
     text-align: center;
 }
 .nz_ai_blog_list_item--title {
-    font-size: 2.4rem;
-    color: #45403F;  
-    font-weight: 600;  
+    font-size: 1.6rem;
+    color: #45403F;
+    font-weight: 600;
     font-family: "Be Vietnam Pro 2022", sans-serif;
 }
 .nz_ai_blog_list_item--text {
-    font-size: 1.8rem;
-    color: #45403F;  
-    font-weight: 400;  
+    font-size: 1.5rem;
+    color: #45403F;
+    font-weight: 400;
     font-family: "Be Vietnam Pro 2022", sans-serif;
 }
 .nz_ai_blog_list_item--img {
@@ -4897,9 +4897,9 @@ option {
     margin-top : 8rem;
 }
 .nz_ai_blog_list_item--header {
-    font-size: 2rem;
-    color: #45403F;  
-    font-weight: 500;  
+    font-size: 1.6rem;
+    color: #45403F;
+    font-weight: 600;
     font-family: "Be Vietnam Pro 2022", sans-serif;
 }
 .nz_ai_blog_list_item--content {
@@ -4910,11 +4910,12 @@ option {
 }
 .nz_ai_slogan {
     margin-top : 8rem;
-    background-color : #eee;
-    padding : 2rem;
+    background-color : #fff3e9;
+    padding : 3rem;
+    border-radius : 1rem;
 }
 .nz_ai_slogan_item--text {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     color: #45403F;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;
@@ -4923,16 +4924,17 @@ option {
     margin-top : 8rem;
 }
 .nz_ai_review_list_item--desc {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     color: #45403F;  
     font-weight: 500;  
     font-family: "Be Vietnam Pro 2022", sans-serif;
 }
 .nz_ai_review_list_item--name {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     color: #45403F;  
     font-weight: 400;  
     font-family: "Be Vietnam Pro 2022", sans-serif;
+    font-style: italic;
 }
 .nz_ai_review_list_item--img {
     witdh : 100%;
@@ -5093,6 +5095,7 @@ option {
     margin-top : 8rem;
     background-color: #fff3e9;
     padding : 3rem;
+    border-radius : 1rem;
   }
   .nz_team_page_service_list_item--img {
     width: 100%;
@@ -5172,6 +5175,7 @@ option {
     margin-top : 10rem;
     background-color: #fff3e9;
     padding:  3rem;
+    border-radius: 1rem;
   }
 
   .nz_team_page_scale {
@@ -5283,26 +5287,28 @@ option {
                     font-size: 2rem;
         }
         /* // */
-        .about_page_banner_item_content--title {
-            font-size: 5rem;
-        }
+     
         .about_page_banner_item_content--text {
-            font-size : 1.8rem;
+            font-size : 1.6rem;
         }
+    
         .about_page_banner_bg {
-            max-width : 400px;
-        }
+            position: absolute;
+            top : 5%;
+             right : 0;
+             max-width : 350px;
+         }
         .about_page_we--title {
-            font-size : 4rem;
+            font-size : 3rem;
         }
         .about_page_we_list_item--title {
-            font-size : 2rem;
+            font-size : 1.7rem;
         }
         .about_page_we_list_item--text  {
-            font-size : 1.8rem;
+            font-size : 1.6rem;
         }
         .about_page_banner_item_content--text_rgba {
-            font-size : 1.8rem;
+            font-size : 1.6rem;
         }
         .about_page_we {
             margin-top : 80px;
@@ -5311,55 +5317,45 @@ option {
             margin-top : 80px;
         }
         .about_page_commit_one_content--title {
-            font-size : 4rem;
+            font-size : 2.5rem;
         }
         .about_page_commit_one_content--text {
-            font-size : 2rem;
+            font-size: 1.8rem;
         }
-        .about_page_commit_one_content--title {
-            font-size : 3rem;
-        }
-        .about_page_commit_one_content--text {
-            font-size : 2rem;
-        }
+    
+     
         .about_page_review_list--desc {
             font-size : 2rem;
         }
-        .about_page_review {
-            margin-top : 8rem;
-        }
+    
         .about_page_job {
             margin-top : 8rem;
         }
         .about_page_job_list--title {
-            font-size : 3.8rem;
+            font-size : 3rem;
         }
         .about_page_job_list--text {
-            font-size : 2rem;
+            font-size : 1.7rem;
         }
         .about_page_job_list--link {
-            font-size : 2rem;
+            font-size : 1.7rem;
         }
         .about_page_slogan {
             margin-top : 8rem;
         }
         .about_page_slogan_content--title {
-            font-size : 3.8rem;
+            font-size : 3rem;
         }
         .about_page_slogan_content--text {
-            font-size : 2rem;
+            font-size : 1.8rem;
         }
-        .social_impact_banner_list_item--title {
-            font-size: 5rem;
-        }
-        .social_impact_banner {
-            margin-top : 8rem;
-        }
+      
+      
         .about_page_we--title {
             font-size : 3rem;
         }
         .social_impact--desc {
-            font-size : 1.8rem;
+            font-size : 1.6rem;
         }
         .about_page_we--text {
             font-size : 2.4rem;
@@ -5371,12 +5367,8 @@ option {
             bottom: -25%;
             right: -82%;
         }
-        .social_impact_trust  {
-            margin-top : 8rem;
-        }
-        .social_impact_blog {
-            margin-top : 8rem;
-        }
+      
+       
   }
   @media screen and (max-width: 1200px) {  
     .banner_image_left--img {
@@ -5588,7 +5580,7 @@ option {
     /* width : 600px; */
 }
 .about_page_slogan_content--text {
-    font-size: 2rem;
+    font-size: 1.8rem;
     margin-top : 2rem;
 }
 .about_page_we_list_item--text {
@@ -5629,6 +5621,60 @@ option {
     margin-top : 5rem;
 }
 .nz_team_page_question {
+    margin-top : 5rem;
+}
+.nz_ai_page_banner_content--title {
+    font-size: 4rem;
+}
+.nz_ai_blog {
+    margin-top : 5rem;
+}
+.nz_ai_question {
+    margin-top : 5rem;
+}
+.nz_ai_slogan  {
+    margin-top : 5rem;
+}
+.nz_ai_review {
+        margin-top : 5rem;
+}
+.csbm_page--title {
+    font-size: 4rem;
+}
+.about_page_banner_item_content--title {
+    font-size: 4rem;
+}
+.about_page_banner_item_content_item {
+    margin-top : 1.6rem;
+}
+.social_impact_banner {
+    margin-top : 5rem;
+}
+.social_impact_banner_list_item--title {
+    font-size: 3rem;
+}
+.social_impact_trust  {
+    margin-top : 5rem;
+}
+.social_impact_blog {
+    margin-top : 5rem;
+}
+.about_page_review {
+    margin-top : 5rem;
+}
+.about_page_job {
+    margin-top : 5rem;
+}
+.social_impact_join_list__new {
+    margin-bottom: 4rem;
+}
+.about_page_we {
+    margin-top : 5rem;
+}
+.about_page_commit {
+    margin-top : 5rem;
+}
+.about_page_slogan {
     margin-top : 5rem;
 }
 }
@@ -5833,9 +5879,7 @@ option {
     .booking_page_modal_left_item--title {
         font-size : 2.5rem;
     }
-    .csbm_page--title {
-        font-size: 4rem;
-    }
+    
     .csbm_page_wrapper {
         margin-top : 10rem;
     }
@@ -5852,9 +5896,7 @@ option {
     .csbm_page_content_item--image {
         width : 180px;
     }
-    .nz_ai_page_banner_content--title {
-        font-size : 3rem;
-    }
+   
     .nz_ai_blog {
         margin-top : 5rem;
     }
@@ -5873,6 +5915,7 @@ option {
     .nz_ai_review {
         margin-top : 5rem;
     }
+   
 }
 @keyframes slideLeft {
     to {
@@ -6235,10 +6278,10 @@ option {
     display : none;
 }
 .about_page_job_list {
-    padding : 2rem;
+    padding : 1rem;
 }
 .about_page_review_list_item {
-    padding : 2rem;
+    padding : 1rem;
 }
 .about_page_commit_one_content  {
     position: unset;
@@ -6298,5 +6341,50 @@ option {
 }
 .nz_team_page_review_item  {
     margin-right : 0rem;
+}
+.nz_ai_page_banner_content--title {
+    font-size : 3rem;
+}
+.nz_ai_page_banner {
+    padding : 1rem;
+}
+.nz_ai_slogan {
+    padding : 1rem;
+}
+.csbm_page--title {
+    font-size: 3rem;
+}
+.nz_ai_blog--title {
+    font-size: 2rem;
+}
+.csbm_page_content_list--title {
+    font-size: 2rem;
+}
+.about_page_review_list--desc {
+    font-size: 1.6rem;
+}
+.about_page_we--text {
+    font-size: 1.8rem;
+}
+.about_page_we--title {
+    font-size: 2rem;
+}
+.social_impact_join_list__new {
+    padding : 1rem;
+}
+.about_page_banner_item_content--title {
+    font-size: 3rem;
+}
+.about_page_commit_one_content--title {
+    font-size: 1.8rem;
+}
+.about_page_job_list--title {
+    font-size: 2rem;
+}
+..about_page_job_list--text {
+    font-size : 1.6rem;
+}
+.about_page_commit_one_content--text {
+    font-size : 1.6rem;
 }
   }
